possible fix on small screen for page finder

--- a/styles/_variables.css
+++ b/styles/_variables.css
@@ -10,4 +10,5 @@
     --red : #ff0000;
     --pokemonToGuess-bg : #f3f2b3;
     --pokeBall-color : #7cfc00;
+    --body-bg : #f7f7afb2;
 }
