--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,7 @@
 /* ALGEMEEN */
 
 body {
-  background-color: rgba(247, 247, 175, 0.699);
+  background-color: var(--body-bg);
   width: 100%;
   height: 100dvh;
   font-family: 'Anta', sans-serif;
@@ -297,6 +297,13 @@ nav p {
   text-align: center;
   font-size: 1.7rem;
   font-family: "Anta", sans-serif;
+}
+
+.landing-main > p {
+  border-radius: 20px;
+  background-color: var(--pokemonToGuess-bg);
+  width: 20%;
+  margin: 0 auto .5rem auto;
 }
 
 .projects {
@@ -1058,8 +1065,8 @@ nav p {
 
 #finder {
   display: grid;
-  width: 100vw;
-  height: 100vh;
+  width: 100dvw;
+  height: 100dvh;
   grid-template-areas: "header" "main";
   grid-template-rows: 60px auto;
   background-image: url("../assets/finder-files/land.png");
